--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "template.js",
   "scripts": {
     "build": "babel src -d lib",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +13,15 @@
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6"
+    "@babel/preset-env": "^7.1.6",
+    "jest": "^24.0.0"
   },
   "dependencies": {
     "async": "^2.6.1",
     "dot": "^1.1.2",
     "filenamify": "^2.1.0",
     "fs-extra": "^7.0.1",
+    "t": "^0.5.1",
     "valid-filename": "^2.0.1"
   }
 }
