--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "template.js",
   "scripts": {
-    "build": "babel src -d lib",
-    "test": "jest --testPathPattern .jest.js"
+    "build": "npm run build:code",
+    "build:code": "babel src -d lib --ignore src/tests",
+    "test": "npm run build && jest --testPathPattern .jest.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
     "fs-extra": "^7.0.1",
     "jest": "^24.0.0"
   },
