Added: constant variables for paths and more. Added: init command for settings

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "npm run build:code -- -w",
     "build": "npm run build:code",
     "test": "npm run build:code && jest --testPathPattern .jest.js",
-    "cli": "node ./cli/cli.js",
+    "cli": "node ./cli",
     "ct": "npm run cli -- create --use hey App"
   },
   "keywords": [],
