--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
+    "babel-jest": "^24.5.0",
     "fs-extra": "^7.0.1",
     "jest": "^24.0.0"
   },
