--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:code": "./node_modules/.bin/babel src --out-dir lib",
     "build:dev": "npm run build:code -- -w",
     "build": "npm run build:code",
-    "test": "npm run build:code && jest --testPathPattern .jest.js",
+    "test:hey": "npm run build:code && jest --testPathPattern .jest.js",
+    "test": "jest --testPathPattern .jest.js",
     "cli": "node ./cli",
     "ct": "npm run cli -- create --use hey App"
   },
@@ -19,6 +20,7 @@
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "babel-jest": "^24.5.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "fs-extra": "^7.0.1",
     "jest": "^24.0.0"
   },
