--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "template.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint ./src",
     "build:code": "./node_modules/.bin/babel src --out-dir lib",
     "build:dev": "BABEL_ENV=development npm run build:code -- -w",
     "build:prod": "BABEL_ENV=production npm run build:code",
@@ -22,6 +23,13 @@
     "@babel/preset-env": "^7.3.1",
     "babel-jest": "^24.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-import-resolver-babel-module": "^5.0.1",
+    "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "fs-extra": "^7.0.1",
     "jest": "^24.0.0"
   },
