--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lint": "./node_modules/.bin/eslint ./src",
     "build:code": "./node_modules/.bin/babel src --out-dir lib",
     "build:dev": "BABEL_ENV=development npm run build:code -- -w",
-    "build:prod": "BABEL_ENV=production npm run build:code",
-    "build": "npm run build",
+    "build:prod": "npm run build:code",
+    "build": "npm run build:prod",
     "test": "npm run test:core",
     "test:core": "npm run build:code && BABEL_ENV=development jest",
     "cli": "node ./cli",
