added force flag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
     "**/.git": true,
     "**/node_modules": true,
     "**/bower_components": true
+  },
+  "files.associations": {
+    "*.md.dot": "markdown",
+    ".js.dot": "javascript"
   }
 }
