--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "template.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint ./src",
-    "build:docs:prod": "NODE_ENV=production ./.bin/generate-docs",
+    "build:docs:prod": "NODE_ENV=production npm run build:docs",
     "build:docs:dev": "nodemon --exec \"npm run build:docs\"",
     "build:docs": "./.bin/generate-docs",
     "build:code": "./node_modules/.bin/babel src --out-dir lib",
