Added more docs. Added doctoc

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "./node_modules/.bin/eslint ./src",
     "build:docs:prod": "NODE_ENV=production npm run build:docs",
     "build:docs:dev": "nodemon --exec \"npm run build:docs\"",
-    "build:docs": "./.bin/generate-docs",
+    "build:docs": "./.bin/generate-docs && ./.bin/generate-docs-doctoc",
     "build:code": "./node_modules/.bin/babel src --out-dir lib",
     "build:dev": "BABEL_ENV=development npm run build:code -- -w",
     "build:prod": "npm run build:code",
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.3.1",
     "babel-jest": "^24.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "doctoc": "^1.4.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
