--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:prod": "npm run build:code",
     "build": "npm run build:prod",
     "test": "npm run test:core",
-    "test:ci": "npm run test:core -- --maxWorkers=4 ",
+    "test:ci": "npm run test:core -- --runInBand ",
     "test:core": "npm run build:code && echo 'code built' && BABEL_ENV=development jest",
     "test:coverage": "npm run test -- --coverage",
     "cli": "node ./cli",
