--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "template.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint ./src",
+    "lint": "./node_modules/.bin/eslint .",
     "build:docs:prod": "NODE_ENV=production npm run build:docs",
     "build:docs:dev": "open -a 'Google Chrome' docs-1/readme.md && nodemon --exec \"npm run build:docs\"",
     "build:docs": "./.bin/generate-docs && ./.bin/generate-docs-doctoc",
@@ -33,12 +33,13 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-import-resolver-babel-module": "^5.0.1",
     "eslint-plugin-import": "^2.17.1",
-    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.0.0"
   },
   "dependencies": {
+    "acorn": "^7.1.0",
     "ansi-colors": "^4.1.1",
     "bluebird": "^3.5.5",
     "debug": "^4.1.1",
