added some more docs trying to finialize cli api docs. added some tests

--- a/.tps/.tpsrc
+++ b/.tps/.tpsrc
@@ -3,6 +3,7 @@
     "name": "testing-config"
   },
   "new-test": {
-    "extendedDest": "__tests__/tests"
+    "extendedDest": "__tests__/tests",
+    "newFolder": false
   }
 }
