added more docs to init

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "build:dev": "BABEL_ENV=development npm run build:code -- -w",
     "build:prod": "npm run build:code",
     "build": "npm run build:prod",
-    "test:init": "npm run test:jest -- --runInBand cli/init",
-    "test:core": "npm run test:jest -- --testPathIgnorePatterns cli/init -- ",
+    "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init -- ",
+    "test:core": "npm run build:code && npm run test:jest -- --testPathIgnorePatterns cli/init -- ",
+    "test:init": "npm run build:code && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
+    "test:jest": "BABEL_ENV=development jest --bail 2",
     "test": "npm run build:code && echo 'built' && ./.bin/run-test",
-    "test:jest": "BABEL_ENV=development jest",
     "cli": "node ./cli"
   },
   "keywords": [],
