--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test:core": "npm run build:code && npm run test:jest -- --testPathIgnorePatterns cli/init -- ",
     "test:jest": "BABEL_ENV=development jest --bail 2",
     "test:init": "npm run build:code && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
-    "test": "npm run build:code && echo 'built' && ./.bin/run-test",
-    "cli": "node ./cli"
+    "test": "npm run build:code && echo 'built' && ./.bin/run-test"
   },
   "keywords": [],
   "author": "",
