--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "template.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint .",
-    "build:docs:prod": "NODE_ENV=production npm run build:docs",
-    "build:docs:dev": "open -a 'Google Chrome' docs-1/readme.md && nodemon --exec \"npm run build:docs\"",
-    "build:docs": "./.bin/generate-docs && ./.bin/generate-docs-doctoc",
-    "build:code": "./node_modules/.bin/babel src --out-dir lib",
-    "build:dev": "BABEL_ENV=development npm run build:code -- -w",
-    "build:prod": "npm run build:code && git add . && git commit -m 'New prod docs' && git push origin master",
-    "build": "npm run build:prod",
+    "docs:build": "./.bin/generate-docs && ./.bin/generate-docs-doctoc",
+    "docs:dev": "open -a 'Google Chrome' docs-1/readme.md && nodemon --exec 'npm run docs:build'",
+    "docs:prod": "NODE_ENV=production npm run docs:build",
+    "docs:publish": "npm run docs:prod && git add docs && git commit -m 'new docs' && git push origin master",
+    "code:build": "./node_modules/.bin/babel src --out-dir lib",
+    "code:dev": "BABEL_ENV=development npm run code:build -- -w",
+    "code:prod": "npm run code:build",
     "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init -- ",
-    "test:core": "npm run build:code && npm run test:jest -- --testPathIgnorePatterns cli/init -- ",
+    "test:core": "npm run code:build && npm run test:jest -- --testPathIgnorePatterns cli/init -- ",
     "test:jest": "BABEL_ENV=development jest --bail 2",
-    "test:init": "npm run build:code && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
-    "test": "npm run build:code && echo 'built' && ./.bin/run-test"
+    "test:init": "npm run code:build && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
+    "lint": "./node_modules/.bin/eslint .",
+    "build": "npm run code:prod && npm run docs:prod",
+    "test": "npm run code:build && echo 'built' && ./.bin/run-test"
   },
   "keywords": [],
   "author": "",
