--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm ci
-        npm run build --if-present
+        npm run code:build --if-present
         npm test
       env:
         CI: true
