--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [12.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -22,6 +22,6 @@ jobs:
       run: |
         npm ci
         npm run code:build --if-present
-        npm test
+        DEBUG=tps:* npm test
       env:
         CI: true
