--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,6 @@ jobs:
       run: |
         npm ci
         npm run code:build --if-present
-        DEBUG=tps:* npm test
+        DEBUG=tps npm test -- rendering/core
       env:
         CI: true
