--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,11 +18,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm ci
-        npm run code:build --if-present
-        npm test -- rendering/core
+    - name: Npm Install
+      run: npm ci
       env:
         CI: true
-        DEBUG: tps
+    - name: Build Assests
+      run: npm run code:build --if-present
+    - name: build, and test
+      run: npm test
