--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,5 +24,5 @@ jobs:
         CI: true
     - name: Build Assests
       run: npm run code:build --if-present
-    - name: build, and test
+    - name: Test Code
       run: npm test
