--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,14 +4,11 @@ on:
   pull_request:
 
 jobs:
-  test:
-
+  test-core:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [12.x]
-
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
@@ -25,4 +22,23 @@ jobs:
     - name: Build Assests
       run: npm run code:build --if-present
     - name: Test Code
-      run: npm test
+      run: npm run test:core
+  test-init:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Npm Install
+      run: npm ci
+      env:
+        CI: true
+    - name: Build Assests
+      run: npm run code:build --if-present
+    - name: Test Code
+      run: npm run test:init
