--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,9 @@ jobs:
     - name: Build Assests
       run: npm run code:build --if-present
     - name: Test Code
-      run: npm run test:core -- new/packages
+      run:  npm run test:core -- new/packages
+      env:
+        DEBUG: tps
   test-core:
     runs-on: ubuntu-latest
     strategy:
