--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "code:dev": "BABEL_ENV=development npm run code:build -- -w",
     "code:prod": "npm run code:build",
     "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init -- ",
-    "test:core": "npm run code:build && npm run test:jest -- --testPathIgnorePatterns cli/init -- ",
-    "test:jest": "BABEL_ENV=development jest --bail 2",
+    "test:core": "npm run code:build && npm run test:jest -- --testPathIgnorePatterns cli/init --",
+    "test:jest": "BABEL_ENV=development jest",
     "test:init": "npm run code:build && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
     "lint": "./node_modules/.bin/eslint .",
     "build": "npm run code:prod && npm run docs:prod",
