--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "fs-extra": "^7.0.1",
     "inquirer": "^6.2.2",
     "is": "^3.3.0",
+    "minimatch": "^3.0.4",
     "prettyjson-256": "^1.5.18",
     "strip-ansi": "^6.0.0",
     "valid-filename": "^2.0.1",
