--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,6 +42,10 @@ jobs:
         CI: true
     - name: ENV
       run: env
+    - name: pwd
+      run: pwd
+    - name: ls
+      run: ls
     - name: Build Assests
       run: npm run code:build --if-present
     - name: Test Code
@@ -62,6 +66,6 @@ jobs:
       env:
         CI: true
     - name: Build Assests
-      run: npm run code:build
+      run: babel src --out-dir lib
     - name: Test Code
       run: npm run test:init
