--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "docs:dev": "open -a 'Google Chrome' docs-1/readme.md && nodemon --exec 'npm run docs:build'",
     "docs:prod": "NODE_ENV=production npm run docs:build",
     "docs:publish": "npm run docs:prod && git add docs && git commit -m 'new docs' && git push origin master",
-    "code:build": "./node_modules/.bin/babel src --out-dir lib",
-    "code:dev": "BABEL_ENV=development npm run code:build -- -w",
+    "code:build": "tsc",
+    "code:dev": "npm run code:build -- -w",
     "code:prod": "npm run code:build",
     "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init -- ",
     "test:core": "npm run code:build && npm run test:jest -- --testPathIgnorePatterns cli/init --",
-    "test:jest": "BABEL_ENV=development jest",
+    "test:jest": "jest",
     "test:init": "npm run code:build && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
     "lint": "./node_modules/.bin/eslint .",
     "build": "npm run code:prod && npm run docs:prod",
     "test": "npm run code:build && echo 'built' && ./.bin/run-test"
   },
+  "resolutions": {
+    "jest-diff": "25.1.0"
+ },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "babel-jest": "^24.5.0",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^14.14.10",
     "doctoc": "^1.4.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -44,14 +44,13 @@
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.0.0"
+    "jest": "^24.9.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-private-methods": "^7.8.3",
     "acorn": "^7.1.0",
     "ansi-colors": "^4.1.1",
-    "babel-eslint": "^10.0.3",
     "bluebird": "^3.5.5",
     "debug": "^4.1.1",
     "dot": "^1.1.2",
