--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.9.0",
-    "ts-jest": "^26.4.4",
+    "jest": "26.4.4",
+    "ts-jest": "26.4.4",
     "typescript": "^4.1.2"
   },
   "dependencies": {
