--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-react": "^7.12.4",
     "jest": "26.0.0",
     "ts-jest": "26.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "3.8.0"
   },
   "dependencies": {
     "acorn": "^7.1.0",
