--- a/package.json
+++ b/package.json
@@ -30,40 +30,40 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "babel-jest": "^24.5.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "doctoc": "^1.4.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-import-resolver-babel-module": "^5.0.1",
-    "eslint-plugin-import": "^2.17.1",
-    "eslint-plugin-jest": "^22.21.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.0.0"
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.3.3",
+    "@babel/preset-env": "7.3.1",
+    "babel-jest": "24.5.0",
+    "babel-plugin-module-resolver": "3.2.0",
+    "doctoc": "1.4.0",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-import-resolver-babel-module": "5.0.1",
+    "eslint-plugin-import": "2.17.1",
+    "eslint-plugin-jest": "22.21.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "jest": "24.0.0"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-private-methods": "^7.8.3",
-    "acorn": "^7.1.0",
-    "ansi-colors": "^4.1.1",
-    "babel-eslint": "^10.0.3",
-    "bluebird": "^3.5.5",
-    "debug": "^4.1.1",
-    "dot": "^1.1.2",
-    "filenamify": "^2.1.0",
-    "find-up": "^3.0.0",
-    "fs-extra": "^7.0.1",
-    "inquirer": "^6.2.2",
-    "is": "^3.3.0",
-    "minimatch": "^3.0.4",
-    "prettyjson-256": "^1.5.18",
-    "strip-ansi": "^6.0.0",
-    "valid-filename": "^2.0.1",
-    "yargs": "^13.2.1"
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-private-methods": "7.8.3",
+    "acorn": "7.1.0",
+    "ansi-colors": "4.1.1",
+    "babel-eslint": "10.0.3",
+    "bluebird": "3.5.5",
+    "debug": "4.1.1",
+    "dot": "1.1.2",
+    "filenamify": "2.1.0",
+    "find-up": "3.0.0",
+    "fs-extra": "7.0.1",
+    "inquirer": "6.2.2",
+    "is": "3.3.0",
+    "minimatch": "3.0.4",
+    "prettyjson-256": "1.5.18",
+    "strip-ansi": "6.0.0",
+    "valid-filename": "2.0.1",
+    "yargs": "13.2.1"
   }
 }
