--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "docs:dev": "open -a 'Google Chrome' docs-1/readme.md && nodemon --exec 'npm run docs:build'",
     "docs:prod": "NODE_ENV=production npm run docs:build",
     "docs:publish": "npm run docs:prod && git add docs && git commit -m 'new docs' && git push origin master",
-    "code:build": "./node_modules/.bin/babel src --out-dir lib",
-    "code:dev": "BABEL_ENV=development npm run code:build -- -w",
+    "code:build": "tsc",
+    "code:dev": "npm run code:build -- -w",
     "code:prod": "npm run code:build",
     "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init -- ",
     "test:core": "npm run code:build && npm run test:jest -- --testPathIgnorePatterns cli/init --",
-    "test:jest": "BABEL_ENV=development jest",
+    "test:jest": "jest",
     "test:init": "npm run code:build && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
+    "typecheck": "tsc --noEmit",
     "lint": "./node_modules/.bin/eslint .",
     "build": "npm run code:prod && npm run docs:prod",
     "test": "npm run code:build && echo 'built' && ./.bin/run-test"
@@ -30,11 +31,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.3.3",
-    "@babel/preset-env": "7.3.1",
-    "babel-jest": "24.5.0",
-    "babel-plugin-module-resolver": "3.2.0",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
     "doctoc": "1.4.0",
     "eslint": "8.32.0",
     "eslint-config-airbnb": "19.0.4",
@@ -44,11 +42,9 @@
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.1",
-    "jest": "24.0.0"
+    "jest": "29.0.0"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-private-methods": "7.8.3",
     "acorn": "7.1.0",
     "ansi-colors": "4.1.1",
     "babel-eslint": "10.0.3",
@@ -63,6 +59,8 @@
     "minimatch": "3.0.4",
     "prettyjson-256": "1.5.18",
     "strip-ansi": "6.0.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4",
     "valid-filename": "2.0.1",
     "yargs": "13.2.1"
   }
