--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
 			"@test": ["./__tests__"]
 		}
 	},
-	"include": ["./src/**/*"],
+	"include": [
+		"./src/**/*",
+		"./__tests__/**/*"
+	],
 	"exclude": ["node_modules"]
 }
