--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "doctoc": "1.4.0",
     "eslint": "8.32.0",
     "eslint-config-airbnb": "19.0.4",
