--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -39,6 +39,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Npm Install
         run: npm install
+      - name: Build Assests
+        run: npm run code:build
       - name: Test Code
         run: npm run test:core
 
