--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "docs:publish": "npm run docs:prod && git add docs && git commit -m 'new docs' && git push origin master",
     "code:build": "tsc",
     "code:dev": "npm run code:build -- -w",
-    "code:prod": "npm run code:build",
+    "code:prod": "ttsc",
     "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init",
     "test:core": "npm run test:jest",
     "test:jest": "jest",
@@ -45,7 +45,9 @@
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.1",
-    "jest": "29.0.0"
+    "jest": "29.0.0",
+    "ttypescript": "^1.5.15",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "acorn": "7.1.0",
@@ -65,6 +67,7 @@
     "prettyjson-256": "1.5.18",
     "strip-ansi": "6.0.0",
     "ts-jest": "^29.0.5",
+    "ts-patch": "^2.1.0",
     "typescript": "^4.9.4",
     "valid-filename": "2.0.1",
     "yargs": "13.2.1"
