use ttsc for everything

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "docs:dev": "open -a 'Google Chrome' docs-1/readme.md && nodemon --exec 'npm run docs:build'",
     "docs:prod": "NODE_ENV=production npm run docs:build",
     "docs:publish": "npm run docs:prod && git add docs && git commit -m 'new docs' && git push origin master",
-    "code:build": "tsc",
+    "code:build": "ttsc",
     "code:dev": "npm run code:build -- -w",
-    "code:prod": "ttsc",
+    "code:prod": "npm run code:build",
     "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init",
     "test:core": "npm run test:jest",
     "test:jest": "jest",
