finished docs almost. ready to test deploy

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,14 @@
   "singleQuote": true,
   "semi": true,
   "bracketSpacing": true,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "overrides": [
+    {
+      "files": "*.mdx",
+      "options": {
+        "parser": "mdx",
+        "proseWrap": "always"
+      }
+    }
+  ]
 }
