--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-react": "^7.32.1",
     "jest": "29.0.0",
     "ttypescript": "^1.5.15",
