Try gh actions again

--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -24,6 +24,8 @@ jobs:
         run: npm install --frozen-lockfile
       - name: Build website
         run: npm run build
+      - run: ls /home/runner/work/templates
+      - run: ls /home/runner/work/templates/templates
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
