--- a/docs/package.json
+++ b/docs/package.json
@@ -23,7 +23,8 @@
     "dot": "^1.1.3",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "templates-mo": "^1.0.6"
   },
   "devDependencies": {
     "@docusaurus/eslint-plugin": "^2.4.1",
