--- a/docs/package.json
+++ b/docs/package.json
@@ -18,12 +18,17 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@docusaurus/theme-mermaid": "^2.4.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@react-spring/web": "^9.7.3",
     "clsx": "^1.2.1",
     "dot": "^1.1.3",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-waypoint": "^10.3.0",
     "templates-mo": "^1.0.6"
   },
   "devDependencies": {
