--- a/package.json
+++ b/package.json
@@ -72,12 +72,14 @@
   "dependencies": {
     "ansi-colors": "4.1.1",
     "bluebird": "3.5.5",
+    "change-case": "^4.1.2",
     "cosmiconfig": "^8.0.0",
     "debug": "4.1.1",
     "dot": "1.1.2",
     "filenamify": "2.1.0",
     "find-up": "3.0.0",
     "fs-extra": "7.0.1",
+    "inflection": "^2.0.1",
     "inquirer": "6.2.2",
     "is": "3.3.0",
     "minimatch": "3.0.4",
