--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/theme-live-codeblock": "^2.4.1",
     "@docusaurus/theme-mermaid": "^2.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -29,7 +30,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-waypoint": "^10.3.0",
-    "templates-mo": "^1.0.12"
+    "templates-mo": "^1.0.13"
   },
   "devDependencies": {
     "@docusaurus/eslint-plugin": "^2.4.1",
