--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "@types/yargs": "^17.0.24",
     "ansi-colors": "4.1.1",
     "bluebird": "3.5.5",
     "change-case": "^4.1.2",
@@ -87,6 +88,6 @@
     "strip-ansi": "6.0.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
-    "yargs": "13.2.1"
+    "yargs": "17.7.2"
   }
 }
