--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"resolveJsonModule": true,
 		"moduleResolution": "node",
 		"module": "CommonJS",
+		"esModuleInterop": true,
 		"target": "es5",
 		"baseUrl": ".",
 		"paths": {
