--- a/docs/package.json
+++ b/docs/package.json
@@ -23,11 +23,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@monaco-editor/react": "^4.5.1",
     "@react-spring/web": "^9.7.3",
+    "antd": "^5.8.2",
     "clsx": "^1.2.1",
     "dot": "^1.1.3",
     "inflection": "^2.0.1",
     "prism-react-renderer": "^1.3.5",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-waypoint": "^10.3.0",
