--- a/docs/package.json
+++ b/docs/package.json
@@ -34,7 +34,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-waypoint": "^10.3.0",
-    "templates-mo": "^1.0.13"
+    "templates-mo": "1.0.16"
   },
   "devDependencies": {
     "@docusaurus/eslint-plugin": "^2.4.1",
