--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,7 +1,7 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"module": "ES6",
+		// "module": "ES6",
 		"declaration": false,
 		"baseUrl": ".",
 		"paths": {
