--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "code:dev": "npm run code:build -- -w",
     "code:prod": "npm run code:build",
     "test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init",
-    "test:core": "npm run test:jest",
+    "test:core": "./.bin/ts ./.bin/generate-test-templates && npm run test:jest",
     "test:jest": "jest",
     "test:init": "npm run code:build && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
     "typecheck": "tsc --noEmit",
