Add github action for legacy cli tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,28 +5,22 @@ on:
   workflow_dispatch:
 
 jobs:
-  #   test-debug:
-  #     runs-on: ubuntu-latest
-  #     strategy:
-  #       matrix:
-  #         node-version: [12.x]
-  #     steps:
-  #     - uses: actions/checkout@v1
-  #     - name: Use Node.js ${{ matrix.node-version }}
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: ${{ matrix.node-version }}
-  #     - name: Npm Install
-  #       run: npm ci
-  #       env:
-  #         CI: true
-  #     - name: Build Assests
-  #       run: npm run code:build --if-present
-  #     - name: Test Code
-  #       run:  npm run test:core -- new/packages
-  #       env:
-  #         DEBUG: tps
   test-core:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18
+      - name: Npm Install
+        run: npm install
+      - name: Test legacy cli
+        run: |
+          npm run code:build
+          npm run test:core -- --testPathIgnorePatterns "/.*/cli/.*"
+
+  test-cli-legacy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -44,7 +38,7 @@ jobs:
       - name: Test Code
         run: |
           npm run code:build
-          npm run test:core
+          LEGACY=1 npx jest cli
 
   lint:
     runs-on: ubuntu-latest
