--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Test legacy cli
         run: |
           npm run code:build
-          npm run test:core -- --testPathIgnorePatterns "/.*/cli/.*"
+          npm run test:core
 
   test-cli-legacy:
     runs-on: ubuntu-latest
