--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-react": "^7.32.1",
     "jest": "29.0.0",
+    "tps-test-3rd-party-package": "github:marcellino-ornelas/tps-test-3rd-party-package",
     "ttypescript": "^1.5.15",
     "typescript-transform-paths": "^3.4.6"
   },
