Fix opts in tpsrc

--- a/__tests__/.tps/.tpsrc
+++ b/__tests__/.tps/.tpsrc
@@ -1,6 +1,8 @@
 {
   "testing-tpsrc": {
-    "extendedDest": "./new-path",
+    "opts": {
+      "extendedDest": "./new-path"
+    },
     "answers": {
       "test": "oh-yea"
     }
