Add prompt example in new-template template

--- a/.tps/new-template/default/settings.json
+++ b/.tps/new-template/default/settings.json
@@ -1,1 +1,11 @@
-{}
+{
+	"prompts": [
+		{
+			"name": "...",
+			"message": "...",
+			"tpsType": "package",
+			"type": "confirm",
+			"default": true
+		}
+	]
+}
