Positional argument sub commands

--- a/.tps/.tpsrc
+++ b/.tps/.tpsrc
@@ -9,6 +9,11 @@
   "yargs-cli-cmd": {
     "opts": {
       "newFolder": false
+    },
+    "answers": {
+      "type": "defaultExport",
+      "typescript": true,
+      "extension": "ts"
     }
   }
 }
