finished experimental fork of dot and adding block syntax

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,7 @@
   "semi": true,
   "bracketSpacing": true,
   "arrowParens": "always",
+  "useTabs": true,
   "overrides": [
     {
       "files": "*.mdx",
