--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           npm run code:build
           ./.bin/ts ./.bin/generate-test-templates
-          LEGACY=1 npx jest cli
+          LEGACY=1 npx jest cli --testPathIgnorePatterns "__tests__/tests/default-templates"
 
   lint:
     runs-on: ubuntu-latest
