--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           npm run code:build
           ./.bin/ts ./.bin/generate-test-templates
-          LEGACY=1 npx jest cli --testPathIgnorePatterns "__tests__/tests/default-templates" "__tests__/tests/cli/init"
+          LEGACY=1 NODE_ENV=dev npx jest cli --testPathIgnorePatterns "__tests__/tests/default-templates" "__tests__/tests/cli/init"
 
   lint:
     runs-on: ubuntu-latest
